--- a/PK29S-CPR/src/main/java/br/edu/utfpr/view/LancamentosJDialog.form
+++ b/PK29S-CPR/src/main/java/br/edu/utfpr/view/LancamentosJDialog.form
@@ -13,7 +13,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -231,6 +231,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtDescricao">
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtDescricaoKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
